kroxylicious-operator/src/test/resources/DerivedResourcesTest/open-shift-routes-ingress/in-KafkaProxyIngress-shift-route.yaml
#
# Copyright Kroxylicious Authors.
#
# Licensed under the Apache Software License version 2.0, available at http://www.apache.org/licenses/LICENSE-2.0
#

---
kind: KafkaProxyIngress
apiVersion: kroxylicious.io/v1alpha1
metadata:
  name: shift-route
  namespace: proxy-ns
  generation: 2
spec:
  proxyRef:
    name: minimal
  openShiftRoutes:
    ingressDomain: 'myingressdomain.com'
status:
  observedGeneration: 2
