kroxylicious-operator/src/test/resources/DerivedResourcesTest/open-shift-routes-ingress/out-ConfigMap-minimal-proxy-config.yaml
#
# Copyright Kroxylicious Authors.
#
# Licensed under the Apache Software License version 2.0, available at http://www.apache.org/licenses/LICENSE-2.0
#

---
apiVersion: "v1"
kind: "ConfigMap"
metadata:
  labels:
    app.kubernetes.io/part-of: "kafka"
    app.kubernetes.io/managed-by: "kroxylicious-operator"
    app.kubernetes.io/name: "kroxylicious-proxy"
    app.kubernetes.io/instance: "minimal"
    app.kubernetes.io/component: "proxy"
  name: "minimal-proxy-config"
  namespace: "proxy-ns"
  ownerReferences:
    - apiVersion: "kroxylicious.io/v1alpha1"
      kind: "KafkaProxy"
      name: "minimal"
data:
  proxy-config.yaml: |-
    ---
    management:
      endpoints:
        prometheus: {}
    virtualClusters:
    - name: "one"
      targetCluster:
        bootstrapServers: "my-cluster-kafka-bootstrap.kafka.svc.cluster.local:9092"
      gateways:
      - name: "shift-route"
        sniHostIdentifiesNode:
          bootstrapAddress: "bootstrap.one-shift-route.myingressdomain.com:9291"
          advertisedBrokerAddressPattern: "broker-$(nodeId).one-shift-route.myingressdomain.com:443"
        tls:
          key:
            privateKeyFile: "/opt/kroxylicious/virtual-cluster/server-certs/downstream-tls-cert/tls.key"
            certificateFile: "/opt/kroxylicious/virtual-cluster/server-certs/downstream-tls-cert/tls.crt"
