kroxylicious-operator/src/test/resources/DerivedResourcesTest/open-shift-routes-ingress/out-Service-minimal-sni.yaml
#
# Copyright Kroxylicious Authors.
#
# Licensed under the Apache Software License version 2.0, available at http://www.apache.org/licenses/LICENSE-2.0
#

---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations:
    kroxylicious.io/bootstrap-servers: "{\"version\":\"0.13.0\",\"bootstrapServers\"\
        :[{\"clusterName\":\"one\",\"ingressName\":\"shift-route\",\"bootstrapServers\"\
        :\"bootstrap.one-shift-route.myingressdomain.com:443\"}]}"
  labels:
    app.kubernetes.io/part-of: "kafka"
    app.kubernetes.io/managed-by: "kroxylicious-operator"
    app.kubernetes.io/name: "kroxylicious-proxy"
    app.kubernetes.io/instance: "minimal"
    app.kubernetes.io/component: "proxy"
  name: "minimal-sni"
  namespace: "proxy-ns"
  ownerReferences:
    - apiVersion: "kroxylicious.io/v1alpha1"
      kind: "KafkaProxy"
      name: "minimal"
spec:
  ports:
    - name: "sni-9083"
      port: 9083
      protocol: "TCP"
      targetPort: 9291
  selector:
    app: "kroxylicious"
    app.kubernetes.io/part-of: "kafka"
    app.kubernetes.io/managed-by: "kroxylicious-operator"
    app.kubernetes.io/name: "kroxylicious-proxy"
    app.kubernetes.io/instance: "minimal"
    app.kubernetes.io/component: "proxy"
  type: "LoadBalancer"
